# PartProject

./: .gitignore  README  data.docx  documentation.docx  setup.rb
boinc/partproject/: Makefile  Makefile.am  checkpoint.cpp  file.cpp  math.cpp  partproject.cpp  partproject.h  partproject.vcproj  result.cpp  ret_vals.h  stdafx.h
boinc/sched/: partproject_assimilator.cpp  partproject_work_generator.cpp
result/: README  check_all_files.rb  congruence.c  file_info.c  get_n.c  partproject.h  typed_congruences.c
scripts/: final_ren.rb  ren-dec.rb
server/: README  config_daemons.xml  partproject_result.xml  partproject_wu.xml
